# ExampleQtTestGithubActions

./: CMakeLists.txt
.github/workflows/: cmake.yml
tests/: CMakeLists.txt
tests/testFail/: CMakeLists.txt  main.cpp  tst_fail.cpp  tst_fail.h
tests/testPassing/: CMakeLists.txt  main.cpp  tst_passing.cpp  tst_passing.h
